5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1674_1107.log
== TEST (2019-04-29 15:42:25) 
-- CODE:
a=int(input())
if(a!=0 and a!=1 and a!=2  and a!=3 and a!=4 and a!=5 and a!=6):
	print("A entrada", a "eh invalida")
else:
	b=int(input())
	conta=a+b
	conta1=(a+b)%7
	if(a==0):
		a=domingo
	elif (a==1):
		a=segunda
	elif(a==2):
		a=terca
	elif (a==3):
		a=quarta
	elif a==4:
		a=quinta
	elif a==5:
		a=sexta
	elif(a==6):
		a=sabado
	elif conta1==0:
		conta1=domingo
	elif conta1==1:
		conta1=segunda
	elif conta1==2:
		conta1==terca
	elif conta1==3:
		conta1=quarta
	elif conta1==4:
		conta1=quinta
	elif conta1==5:
		conta1=sexta
	elif conta1==6:
		conta1=sabado
print("Hoje eh", a ,"e o dia futuro eh", conta1)
	
	
		
		


-- ERROR:
File "XXXX", line 3
    print("A entrada", a "eh invalida")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:40) 
-- CODE:
a=int(input())
if(a!=0 and a!=1 and a!=2  and a!=3 and a!=4 and a!=5 and a!=6):
	print("A entrada", a "eh invalida")
else:
	b=int(input())
	conta=a+b
	conta1=(a+b)%7
	if(a==0):
		a=domingo
	elif (a==1):
		a=segunda
	elif(a==2):
		a=terca
	elif (a==3):
		a=quarta
	elif a==4:
		a=quinta
	elif a==5:
		a=sexta
	elif(a==6):
		a=sabado
	elif conta1==0:
		conta1=domingo
	elif conta1==1:
		conta1=segunda
	elif conta1==2:
		conta1==terca
	elif conta1==3:
		conta1=quarta
	elif conta1==4:
		conta1=quinta
	elif conta1==5:
		conta1=sexta
	elif conta1==6:
		conta1=sabado
print("Hoje eh", a ,"e o dia futuro eh", conta1)
	
	
		
		


-- ERROR:
File "XXXX", line 3
    print("A entrada", a "eh invalida")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:52) 
-- CODE:
a=int(input())
if(a!=0 and a!=1 and a!=2  and a!=3 and a!=4 and a!=5 and a!=6):
	print("A entrada", a ,"eh invalida")
else:
	b=int(input())
	conta=a+b
	conta1=(a+b)%7
	if(a==0):
		a=domingo
	elif (a==1):
		a=segunda
	elif(a==2):
		a=terca
	elif (a==3):
		a=quarta
	elif a==4:
		a=quinta
	elif a==5:
		a=sexta
	elif(a==6):
		a=sabado
	elif conta1==0:
		conta1=domingo
	elif conta1==1:
		conta1=segunda
	elif conta1==2:
		conta1==terca
	elif conta1==3:
		conta1=quarta
	elif conta1==4:
		conta1=quinta
	elif conta1==5:
		conta1=sexta
	elif conta1==6:
		conta1=sabado
print("Hoje eh", a ,"e o dia futuro eh", conta1)
	
	
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 36, in <module>
    print("Hoje eh", a ,"e o dia futuro eh", conta1)
NameError: name 'conta1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:44:28) 
-- CODE:
a=int(input())
if(a!=0 and a!=1 and a!=2  and a!=3 and a!=4 and a!=5 and a!=6):
	print("A entrada", a ,"eh invalida")
else:
	b=int(input())
	conta1=(a+b)%7
	if(a==0):
		a=domingo
	elif (a==1):
		a=segunda
	elif(a==2):
		a=terca
	elif (a==3):
		a=quarta
	elif a==4:
		a=quinta
	elif a==5:
		a=sexta
	elif(a==6):
		a=sabado
	elif conta1==0:
		conta1=domingo
	elif conta1==1:
		conta1=segunda
	elif conta1==2:
		conta1==terca
	elif conta1==3:
		conta1=quarta
	elif conta1==4:
		conta1=quinta
	elif conta1==5:
		conta1=sexta
	elif conta1==6:
		conta1=sabado
print("Hoje eh", a ,"e o dia futuro eh", conta1)
	
	
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 35, in <module>
    print("Hoje eh", a ,"e o dia futuro eh", conta1)
NameError: name 'conta1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:44:58) 
-- CODE:
a=int(input())
if(a!=0 and a!=1 and a!=2  and a!=3 and a!=4 and a!=5 and a!=6):
	print("A entrada", a ,"eh invalida")
else:
	b=int(input())
	conta1=(a+b)%7
	if(a==0):
		a=domingo
	elif (a==1):
		a=segunda
	elif(a==2):
		a=terca
	elif (a==3):
		a=quarta
	elif a==4:
		a=quinta
	elif a==5:
		a=sexta
	elif(a==6):
		a=sabado
	elif conta1==0:
		conta1=domingo
	elif conta1==1:
		conta1=segunda
	elif conta1==2:
		conta1==terca
	elif conta1==3:
		conta1=quarta
	elif conta1==4:
		conta1=quinta
	elif conta1==5:
		conta1=sexta
	elif conta1==6:
		conta1=sabado
	print("Hoje eh", a ,"e o dia futuro eh", conta1)
	
	
		
		


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:45:09) 
-- CODE:
a=int(input())
if(a!=0 and a!=1 and a!=2  and a!=3 and a!=4 and a!=5 and a!=6):
	print("A entrada", a ,"eh invalida")
else:
	b=int(input())
	conta1=(a+b)%7
	if(a==0):
		a=domingo
	elif (a==1):
		a=segunda
	elif(a==2):
		a=terca
	elif (a==3):
		a=quarta
	elif a==4:
		a=quinta
	elif a==5:
		a=sexta
	elif(a==6):
		a=sabado
	elif conta1==0:
		conta1=domingo
	elif conta1==1:
		conta1=segunda
	elif conta1==2:
		conta1==terca
	elif conta1==3:
		conta1=quarta
	elif conta1==4:
		conta1=quinta
	elif conta1==5:
		conta1=sexta
	elif conta1==6:
		conta1=sabado
	print("Hoje eh", a ,"e o dia futuro eh", conta1)
	
	
		
		


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:47:30) 
-- CODE:
a=int(input())
if(a!=0 and a!=1 and a!=2  and a!=3 and a!=4 and a!=5 and a!=6):
	print("A entrada", a ,"eh invalida")
else:
	b=int(input())
	conta1=(a+b)%7
	if(a==0):
		a="domingo"
	elif (a==1):
		a="segunda"
	elif(a==2):
		a="terca"
	elif (a==3):
		a="quarta"
	elif a==4:
		a="quinta"
	elif a==5:
		a="sexta"
	elif(a==6):
		a="sabado"
	elif conta1==0:
		conta1="domingo"
	elif conta1==1:
		conta1="segunda"
	elif conta1==2:
		conta1=="terca"
	elif conta1==3:
		conta1="quarta"
	elif conta1==4:
		conta1="quinta"
	elif conta1==5:
		conta1="sexta"
	elif conta1==6:
		conta1="sabado"
	print("Hoje eh", a ,"e o dia futuro eh", conta1)
	
	
		
		


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:49:32) 
-- CODE:
a=int(input())
if(a!=0 and a!=1 and a!=2  and a!=3 and a!=4 and a!=5 and a!=6):
	print("A entrada", a ,"eh invalida")
else:
	b=int(input())
	conta1=(a+b)%7
	if(a==0):
		a="domingo"
	elif (a==1):
		a="segunda"
	elif(a==2):
		a="terca"
	elif (a==3):
		a="quarta"
	elif a==4:
		a="quinta"
	elif a==5:
		a="sexta"
	elif(a==6):
		a="sabado"
	elif conta1==0:
		conta1="domingo"
	elif conta1==1:
		conta1="segunda"
	elif conta1==2:
		conta1=="terca"
	elif conta1==3:
		conta1="quarta"
	elif conta1==4:
		conta1="quinta"
	elif conta1==5:
		conta1="sexta"
	elif conta1==6:
		conta1="sabado"
	print("Hoje eh", a ,"e o dia futuro eh", conta1)
	
	
		
		


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:52:04) 
-- CODE:
a=int(input())
if(a!=0 and a!=1 and a!=2  and a!=3 and a!=4 and a!=5 and a!=6):
	print("A entrada", a ,"eh invalida")
else:
	b=int(input())
	conta1=(a+b)%7
	if(a==0):
		a="domingo"
	elif (a==1):
		a="segunda"
	elif(a==2):
		a="terca"
	elif (a==3):
		a="quarta"
	elif a==4:
		a="quinta"
	elif a==5:
		a="sexta"
	elif(a==6):
		a="sabado"
	elif conta1==0:
		conta="domingo"
	elif conta1==1:
		conta="segunda"
	elif conta1==2:
		conta=="terca"
	elif conta1==3:
		conta="quarta"
	elif conta1==4:
		conta="quinta"
	elif conta1==5:
		conta="sexta"
	elif conta1==6:
		conta="sabado"
	print("Hoje eh", a ,"e o dia futuro eh", conta)
	
	
		
		


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:54:15) 
-- CODE:
a=int(input())
if(a!=0 and a!=1 and a!=2  and a!=3 and a!=4 and a!=5 and a!=6):
	print("A entrada", a ,"eh invalida")
else:
	b=int(input())
	conta1=(a+b)%7
	if(a==0):
		a="domingo"
	elif (a==1):
		a="segunda"
	elif(a==2):
		a="terca"
	elif (a==3):
		a="quarta"
	elif a==4:
		a="quinta"
	elif a==5:
		a="sexta"
	elif(a==6):
		a="sabado"
	if conta1==0:
		conta="domingo"
	elif conta1==1:
		conta1="segunda"
	elif conta1==2:
		conta1=="terca"
	elif conta1==3:
		conta1="quarta"
	elif conta1==4:
		conta1="quinta"
	elif conta1==5:
		conta1="sexta"
	elif conta1==6:
		conta1="sabado"
	print("Hoje eh", a ,"e o dia futuro eh", conta)
	
	
		
		


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:54:28) 
-- CODE:
a=int(input())
if(a!=0 and a!=1 and a!=2  and a!=3 and a!=4 and a!=5 and a!=6):
	print("A entrada", a ,"eh invalida")
else:
	b=int(input())
	conta1=(a+b)%7
	if(a==0):
		a="domingo"
	elif (a==1):
		a="segunda"
	elif(a==2):
		a="terca"
	elif (a==3):
		a="quarta"
	elif a==4:
		a="quinta"
	elif a==5:
		a="sexta"
	elif(a==6):
		a="sabado"
	if conta1==0:
		conta="domingo"
	elif conta1==1:
		conta1="segunda"
	elif conta1==2:
		conta1=="terca"
	elif conta1==3:
		conta1="quarta"
	elif conta1==4:
		conta1="quinta"
	elif conta1==5:
		conta1="sexta"
	elif conta1==6:
		conta1="sabado"
	print("Hoje eh", a ,"e o dia futuro eh", conta1)
	
	
		
		


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:54:57) 
-- CODE:
a=int(input())
if(a!=0 and a!=1 and a!=2  and a!=3 and a!=4 and a!=5 and a!=6):
	print("A entrada", a ,"eh invalida")
else:
	b=int(input())
	conta1=(a+b)%7
	if(a==0):
		a="domingo"
	elif (a==1):
		a="segunda"
	elif(a==2):
		a="terca"
	elif (a==3):
		a="quarta"
	elif a==4:
		a="quinta"
	elif a==5:
		a="sexta"
	elif(a==6):
		a="sabado"
	if conta1==0:
		conta="domingo"
	elif conta1==1:
		conta1="segunda"
	elif conta1==2:
		conta1=="terca"
	elif conta1==3:
		conta1="quarta"
	elif conta1==4:
		conta1="quinta"
	elif conta1==5:
		conta1="sexta"
	elif conta1==6:
		conta1="sabado"
	print("Hoje eh", a ,"e o dia futuro eh", conta1)
	
	
		
		


-- EXECUTION TIME:
0.175852
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
